# lithos-loom

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md  SPECIFICATION.md  result-schema.json
docs/adr/: 0001-github-watch-config-storage.md  0003-code-quality-review-strength.md
docs/cli/: project-github-repos.md  project-import.md  project-regenerate-done.md  project-set-github-repo.md
docs/macros/: README.md  capture-task.md  create-project.md
docs/prd/: capture-macro-tag-parsing.md  full.md  mvp.md
examples/: lithos-loom.toml
src/lithos_loom/: __init__.py  __main__.py  bus.py  config.py  cursor_store.py  daemon.py  doctor.py  errors.py  github_client.py  lithos_client.py  main.py  render.py  (+7 more)
tests/: conftest.py  test_bus.py  test_cli_project_github.py  test_cli_regenerate_done.py  test_cli_task.py  test_config.py  test_cursor_store.py  test_develop_pr_merge.py  test_github_client.py  test_github_issue_push.py  test_github_issue_sync.py  test_github_issue_watcher.py  test_github_watcher_child.py  test_human_actionable.py  test_lithos_client.py  test_lithos_event_stream.py  test_lithos_note_stream.py  test_lithos_poller.py  test_main.py  test_note_conflict.py  test_note_push.py  test_obsidian_dir_watcher.py  test_obsidian_projection.py  test_obsidian_status_transition.py  test_obsidian_sync_child.py  test_plugin_runner.py  test_project_context_projection.py  test_render_project_context.py  test_route_runner.py  test_route_runner_child.py  test_runner_detection.py  test_runner_git.py  test_runner_worktree.py  test_story_develop_check_set.py  test_story_develop_containers.py  test_story_develop_core.py  test_story_develop_daemon.py  test_story_develop_handoff.py  test_story_develop_lithos_io.py  test_story_develop_main.py  (+3 more)
(+72 files in other folders)
